force-app/main/default/objects/Product_Geo_Availability__c/Product_Geo_Availability__c.object-meta.xml
<CustomObject>
    <label>Product Geo Availability</label>
    <nameField>
        <label>Product Geo Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Geo Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>