force-app/main/default/objects/Product_Geo_Availability__c/fields/Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Autonumber__c</fullName>
    <externalId>true</externalId>
    <label>Autonumber</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>