force-app/main/default/objects/Product_Geo_Availability__c/fields/Go_Live_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Active_Date__c</fullName>
    <label>Go Live (Active) Date</label>
    <type>Date</type>
</CustomField>