force-app/main/default/objects/Product_Geo_Availability__c/fields/Last_time_buy_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_time_buy_Date__c</fullName>
    <description>Last time buy</description>
    <label>Last time buy Date</label>
    <type>Date</type>
</CustomField>