force-app/main/default/objects/Product_Geo_Availability__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Free Trial</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Promo where Promo Reason = Beta Program</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Rev (Non-Renewal)</fullName>
            </value>
            <value>
                <fullName>Rev Renewal Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>