force-app/main/default/objects/Product_Geo_Availability__c/fields/Product_Requirement_if_PM_Gated__c.field-meta.xml
<CustomField>
    <fullName>Product_Requirement_if_PM_Gated__c</fullName>
    <description>Task required to complete by AE before submitting EA shipment for approval</description>
    <label>Product Requirement if PM Gated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>