force-app/main/default/objects/Product_Geo_Availability__c/fields/Status_GTMS_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Status_GTMS_Lifecycle__c</fullName>
    <label>Status (GTMS Lifecycle)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>EOS</fullName>
            </value>
            <value>
                <fullName>EOST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>