force-app/main/default/objects/Product_Geo_Availability__c/validationRules/Product_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Validation</fullName>
    <active>true</active>
    <description>Product field on product geo availability is mandatory</description>
    <errorConditionFormula>ISBLANK(Product__c )</errorConditionFormula>
    <errorMessage>Product cannot be blank</errorMessage>
</ValidationRule>